# amdahl

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
amdahl/: amdahl.py
